users page update
